@@ -19,6 +19,8 @@ package com.badlogic.gdx.backends.lwjgl3;
 import java.io.PrintStream;
 import java.nio.IntBuffer;
 
+import com.badlogic.gdx.ApplicationListener;
+import com.badlogic.gdx.LifecycleListener;
 import org.lwjgl.BufferUtils;
 import org.lwjgl.PointerBuffer;
 import org.lwjgl.glfw.GLFW;
@@ -66,6 +68,9 @@ public class Lwjgl3ApplicationConfiguration extends Lwjgl3WindowConfiguration {
 	int idleFPS = 60;
 	int foregroundFPS = 0;
 
+	boolean pauseWhenMinimized = true;
+	boolean pauseWhenLostFocus = false;
+
 	String preferencesDirectory = ".prefs/";
 	Files.FileType preferencesFileType = FileType.External;
 
@@ -99,6 +104,8 @@ public class Lwjgl3ApplicationConfiguration extends Lwjgl3WindowConfiguration {
 		transparentFramebuffer = config.transparentFramebuffer;
 		idleFPS = config.idleFPS;
 		foregroundFPS = config.foregroundFPS;
+		pauseWhenMinimized = config.pauseWhenMinimized;
+		pauseWhenLostFocus = config.pauseWhenLostFocus;
 		preferencesDirectory = config.preferencesDirectory;
 		preferencesFileType = config.preferencesFileType;
 		hdpiMode = config.hdpiMode;
@@ -183,6 +190,18 @@ public class Lwjgl3ApplicationConfiguration extends Lwjgl3WindowConfiguration {
 	 * 0. */
 	public void setForegroundFPS (int fps) {
 		this.foregroundFPS = fps;
+	}
+
+	/** Sets whether to pause the application {@link ApplicationListener#pause()} and fire
+	 * {@link LifecycleListener#pause()}/{@link LifecycleListener#resume()} events on when window is minimized/restored. **/
+	public void setPauseWhenMinimized (boolean pauseWhenMinimized) {
+		this.pauseWhenMinimized = pauseWhenMinimized;
+	}
+
+	/** Sets whether to pause the application {@link ApplicationListener#pause()} and fire
+	 * {@link LifecycleListener#pause()}/{@link LifecycleListener#resume()} events on when window loses/gains focus. **/
+	public void setPauseWhenLostFocus (boolean pauseWhenLostFocus) {
+		this.pauseWhenLostFocus = pauseWhenLostFocus;
 	}
 
 	/** Sets the directory where {@link Preferences} will be stored, as well as the file type to be used to store them. Defaults to
